; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/frontends/extr_mb86a16.c_afcex_data_set.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/frontends/extr_mb86a16.c_afcex_data_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mb86a16_state = type { i32 }

@MB86A16_AFCEXL = common dso_local global i32 0, align 4
@MB86A16_AFCEXH = common dso_local global i32 0, align 4
@verbose = common dso_local global i32 0, align 4
@MB86A16_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"I2C transfer error\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mb86a16_state*, i8, i8)* @afcex_data_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @afcex_data_set(%struct.mb86a16_state* %0, i8 zeroext %1, i8 zeroext %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.mb86a16_state*, align 8
  %6 = alloca i8, align 1
  %7 = alloca i8, align 1
  store %struct.mb86a16_state* %0, %struct.mb86a16_state** %5, align 8
  store i8 %1, i8* %6, align 1
  store i8 %2, i8* %7, align 1
  %8 = load %struct.mb86a16_state*, %struct.mb86a16_state** %5, align 8
  %9 = load i32, i32* @MB86A16_AFCEXL, align 4
  %10 = load i8, i8* %6, align 1
  %11 = call i64 @mb86a16_write(%struct.mb86a16_state* %8, i32 %9, i8 zeroext %10)
  %12 = icmp slt i64 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %3
  br label %22

14:                                               ; preds = %3
  %15 = load %struct.mb86a16_state*, %struct.mb86a16_state** %5, align 8
  %16 = load i32, i32* @MB86A16_AFCEXH, align 4
  %17 = load i8, i8* %7, align 1
  %18 = call i64 @mb86a16_write(%struct.mb86a16_state* %15, i32 %16, i8 zeroext %17)
  %19 = icmp slt i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %14
  br label %22

21:                                               ; preds = %14
  store i32 0, i32* %4, align 4
  br label %26

22:                                               ; preds = %20, %13
  %23 = load i32, i32* @verbose, align 4
  %24 = load i32, i32* @MB86A16_ERROR, align 4
  %25 = call i32 @dprintk(i32 %23, i32 %24, i32 1, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %4, align 4
  br label %26

26:                                               ; preds = %22, %21
  %27 = load i32, i32* %4, align 4
  ret i32 %27
}

declare dso_local i64 @mb86a16_write(%struct.mb86a16_state*, i32, i8 zeroext) #1

declare dso_local i32 @dprintk(i32, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
